Update CSS to fix layout bugs on pre

--- a/src/.vitepress/theme/css/main.css
+++ b/src/.vitepress/theme/css/main.css
@@ -51,7 +51,7 @@ canvas {
     color: #fff;
     text-align: left;
     font-size: 1.2rem;
-	width: 169px;
+	width: 180px;
     z-index: 100 !important;
 }
 
@@ -157,7 +157,7 @@ canvas {
 
 #app>.container {
     position: fixed;
-    left: 190px;
+    left: 201px;
     min-width: 400px;
     max-width: 1200px;
     background-color: #000000dd;
@@ -188,7 +188,7 @@ canvas {
     padding: 30px;
 }
 
-.tag {
+.badge-tag {
     color: #000;
     font-size: 10pt;
     letter-spacing: -0.5px;
@@ -199,7 +199,7 @@ canvas {
     margin-right: 3px;
 }
 
-.category {
+.badge-category {
     color: #000;
     font-size: 10pt;
     letter-spacing: -0.5px;
@@ -217,7 +217,9 @@ canvas {
 pre,
 code {
     font-family: "Oxygen Mono", monospace;
-    line-height: 1.2em;
+    font-size: 16px;
+    letter-spacing: -1px;
+    line-height: 1.3em;
 }
 
 code a,
